--- a/public/assets/css/pages/wizard/wizard-3.css
+++ b/public/assets/css/pages/wizard/wizard-3.css
@@ -39,10 +39,10 @@
           background-color: transparent;
           transition: color 0.15s ease, background-color 0.15s ease, border-color 0.15s ease, box-shadow 0.15s ease; }
     .wizard.wizard-3 .wizard-nav .wizard-steps .wizard-step[data-wizard-state="current"] .wizard-label {
-      color: #8950FC; }
+      color: #0c1b3a; }
       .wizard.wizard-3 .wizard-nav .wizard-steps .wizard-step[data-wizard-state="current"] .wizard-label .wizard-bar:after {
         width: 100%;
-        background-color: #8950FC; }
+        background-color: #0c1b3a; }
 
 @media (max-width: 991.98px) {
   .wizard.wizard-3 .wizard-nav .wizard-steps {
