fix bug datatable conflict with dropdown

--- a/public/assets/css/pages/wizard/wizard-4.css
+++ b/public/assets/css/pages/wizard/wizard-4.css
@@ -31,8 +31,8 @@
           display: flex;
           align-items: center;
           justify-content: center;
-          background-color: rgba(12, 27, 58, 0.08);
-          color: #0c1b3a;
+          background-color: rgba(137, 80, 252, 0.08);
+          color: #8950FC;
           margin-right: 1rem;
           border-radius: 0.5rem; }
         .wizard.wizard-4 .wizard-nav .wizard-steps .wizard-step .wizard-wrapper .wizard-label {
@@ -45,9 +45,9 @@
         background-color: #ffffff; }
         .wizard.wizard-4 .wizard-nav .wizard-steps .wizard-step[data-wizard-state="current"] .wizard-wrapper .wizard-number {
           color: #ffffff;
-          background-color: #0c1b3a; }
+          background-color: #8950FC; }
         .wizard.wizard-4 .wizard-nav .wizard-steps .wizard-step[data-wizard-state="current"] .wizard-wrapper .wizard-label .wizard-title {
-          color: #0c1b3a; }
+          color: #8950FC; }
     .wizard.wizard-4 .wizard-nav .wizard-steps[data-total-steps="2"] .wizard-step {
       flex: 0 0 calc(50% - 0.25rem);
       width: calc(50% - 0.25rem); }
