--- a/public/assets/plugins/global/plugins.bundle.css
+++ b/public/assets/plugins/global/plugins.bundle.css
@@ -3404,14 +3404,26 @@ select.selectpicker {
   float: none;
 }
 /*# sourceMappingURL=bootstrap-select.css.map */
-/**
-  * bootstrap-switch - Turn checkboxes and radio buttons into toggle switches.
-  *
-  * @version v3.4.0
-  * @homepage https://bttstrp.github.io/bootstrap-switch
-  * @author Mattia Larentis <mattia@larentis.eu> (http://larentis.eu)
-  * @license MIT
-  */
+/* ========================================================================
+ * bootstrap-switch - v3.3.0
+ * http://www.bootstrap-switch.org
+ * ========================================================================
+ * Copyright 2012-2013 Mattia Larentis
+ *
+ * ========================================================================
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *     http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ * ========================================================================
+ */
 
 .bootstrap-switch {
   display: inline-block;
@@ -3419,19 +3431,17 @@ select.selectpicker {
   cursor: pointer;
   border-radius: 4px;
   border: 1px solid;
-  border-color: #ccc;
+  border-color: #cccccc;
   position: relative;
   text-align: left;
   overflow: hidden;
   line-height: 8px;
-  z-index: 0;
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
   vertical-align: middle;
   -webkit-transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
-  -o-transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
   transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
 }
 .bootstrap-switch .bootstrap-switch-container {
@@ -3448,8 +3458,8 @@ select.selectpicker {
   -moz-box-sizing: border-box;
   box-sizing: border-box;
   cursor: pointer;
-  display: table-cell;
-  vertical-align: middle;
+  display: inline-block !important;
+  height: 100%;
   padding: 6px 12px;
   font-size: 14px;
   line-height: 20px;
@@ -3462,7 +3472,7 @@ select.selectpicker {
 .bootstrap-switch .bootstrap-switch-handle-on.bootstrap-switch-primary,
 .bootstrap-switch .bootstrap-switch-handle-off.bootstrap-switch-primary {
   color: #fff;
-  background: #337ab7;
+  background: #428bca;
 }
 .bootstrap-switch .bootstrap-switch-handle-on.bootstrap-switch-info,
 .bootstrap-switch .bootstrap-switch-handle-off.bootstrap-switch-info {
@@ -3494,11 +3504,8 @@ select.selectpicker {
   margin-top: -1px;
   margin-bottom: -1px;
   z-index: 100;
-  color: #333;
-  background: #fff;
-}
-.bootstrap-switch span::before {
-  content: "\200b";
+  color: #333333;
+  background: #ffffff;
 }
 .bootstrap-switch .bootstrap-switch-handle-on {
   border-bottom-left-radius: 3px;
@@ -3513,11 +3520,13 @@ select.selectpicker {
   position: absolute !important;
   top: 0;
   left: 0;
-  margin: 0;
-  z-index: -1;
   opacity: 0;
   filter: alpha(opacity=0);
-  visibility: hidden;
+  z-index: -1;
+}
+.bootstrap-switch input[type='radio'].form-control,
+.bootstrap-switch input[type='checkbox'].form-control {
+  height: auto;
 }
 .bootstrap-switch.bootstrap-switch-mini .bootstrap-switch-handle-on,
 .bootstrap-switch.bootstrap-switch-mini .bootstrap-switch-handle-off,
@@ -3538,7 +3547,7 @@ select.selectpicker {
 .bootstrap-switch.bootstrap-switch-large .bootstrap-switch-label {
   padding: 6px 16px;
   font-size: 18px;
-  line-height: 1.3333333;
+  line-height: 1.33;
 }
 .bootstrap-switch.bootstrap-switch-disabled,
 .bootstrap-switch.bootstrap-switch-readonly,
@@ -3560,7 +3569,6 @@ select.selectpicker {
 }
 .bootstrap-switch.bootstrap-switch-animate .bootstrap-switch-container {
   -webkit-transition: margin-left 0.5s;
-  -o-transition: margin-left 0.5s;
   transition: margin-left 0.5s;
 }
 .bootstrap-switch.bootstrap-switch-inverse .bootstrap-switch-handle-on {
